@@ -1495,17 +1495,6 @@ TclCompileObj(
     register ByteCode *codePtr;	/* Tcl Internal type of bytecode. */
     Namespace *namespacePtr;
 
-    /*
-     * Check that the interpreter is ready to execute scripts. Note that we
-     * manage the interp's runlevel here: it is a small white lie (maybe), but
-     * saves a ++/-- pair at each invocation. Amazingly enough, the impact on
-     * performance is noticeable.
-     */
-
-    if (TclInterpReady(interp) == TCL_ERROR) {
-	return NULL;
-    }
-
     namespacePtr = iPtr->varFramePtr->nsPtr;
 
     /*
